<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_order"
        android:icon="@drawable/ic_listed_items"
        android:title="@string/title_records" />
    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/ic_options"
        android:title="@string/title_my_news" />
    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_male"
        android:title="@string/title_find_events" />
    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/bottom_more"
        android:title="@string/title_more" />
</menu>