<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="@dimen/_50sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorlgrey">

            <RelativeLayout
                android:id="@+id/rl_about_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginTop="@dimen/_4sdp"
                android:padding="@dimen/_8sdp">

                <ImageView
                    android:id="@+id/img_about_us"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_home"
                    android:tint="@color/black"
                    android:layout_marginStart="@dimen/_8sdp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/img_about_us"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:text="@string/about_us"
                    android:textSize="@dimen/_14sdp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_contact_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginTop="@dimen/_1sdp"
                android:padding="@dimen/_8sdp"
                android:layout_below="@+id/rl_about_us">

                <ImageView
                    android:id="@+id/img_contact_us"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_home"
                    android:tint="@color/black"
                    android:layout_marginStart="@dimen/_8sdp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/img_contact_us"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:text="@string/contact_us"
                    android:textSize="@dimen/_14sdp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginTop="@dimen/_16sdp"
                android:padding="@dimen/_8sdp"
                android:layout_below="@+id/rl_contact_us"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/img_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_home"
                    android:tint="@color/black"
                    android:layout_marginStart="@dimen/_8sdp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/img_gallery"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:text="@string/gallery"
                    android:textSize="@dimen/_14sdp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_videos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginTop="@dimen/_1sdp"
                android:padding="@dimen/_8sdp"
                android:layout_below="@+id/rl_gallery"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/img_videos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_home"
                    android:tint="@color/black"
                    android:layout_marginStart="@dimen/_8sdp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/img_videos"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:text="@string/videos"
                    android:textSize="@dimen/_14sdp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_testimonial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginTop="@dimen/_1sdp"
                android:padding="@dimen/_8sdp"
                android:layout_below="@+id/rl_videos">

                <ImageView
                    android:id="@+id/img_testimonial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_home"
                    android:tint="@color/black"
                    android:layout_marginStart="@dimen/_8sdp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/img_testimonial"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:text="@string/testimonial"
                    android:textSize="@dimen/_14sdp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_pay_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginTop="@dimen/_1sdp"
                android:padding="@dimen/_8sdp"
                android:layout_below="@+id/rl_testimonial"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/img_pay_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_home"
                    android:tint="@color/black"
                    android:layout_marginStart="@dimen/_8sdp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/img_pay_history"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:text="@string/pay_history"
                    android:textSize="@dimen/_14sdp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginTop="@dimen/_16sdp"
                android:padding="@dimen/_8sdp"
                android:layout_below="@+id/rl_pay_history">

                <ImageView
                    android:id="@+id/img_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_home"
                    android:tint="@color/black"
                    android:layout_marginStart="@dimen/_8sdp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/img_share"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:text="@string/share"
                    android:textSize="@dimen/_14sdp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_rate_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginTop="@dimen/_1sdp"
                android:padding="@dimen/_8sdp"
                android:layout_below="@+id/rl_share">

                <ImageView
                    android:id="@+id/img_rate_us"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_home"
                    android:tint="@color/black"
                    android:layout_marginStart="@dimen/_8sdp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/img_rate_us"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:text="@string/rate_us"
                    android:textSize="@dimen/_14sdp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginTop="@dimen/_16sdp"
                android:padding="@dimen/_8sdp"
                android:layout_below="@+id/rl_rate_us">

                <ImageView
                    android:id="@+id/img_privacy_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_home"
                    android:tint="@color/black"
                    android:layout_marginStart="@dimen/_8sdp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/img_privacy_policy"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:text="@string/privacy_policy"
                    android:textSize="@dimen/_14sdp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_terms_conditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginTop="@dimen/_1sdp"
                android:padding="@dimen/_8sdp"
                android:layout_below="@+id/rl_privacy_policy">

                <ImageView
                    android:id="@+id/img_terms_conditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_home"
                    android:tint="@color/black"
                    android:layout_marginStart="@dimen/_8sdp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/img_terms_conditions"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:text="@string/terms_condition"
                    android:textSize="@dimen/_14sdp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginTop="@dimen/_1sdp"
                android:visibility="gone"
                android:padding="@dimen/_8sdp"
                android:layout_below="@+id/rl_terms_conditions">

                <ImageView
                    android:id="@+id/img_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_home"
                    android:tint="@color/black"
                    android:layout_marginStart="@dimen/_8sdp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/img_logout"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:text="@string/logout"
                    android:textSize="@dimen/_14sdp"/>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>